# Forecasting-Financial-Inclusion-in-Ethiopia

./: .gitignore  README.md  init_setup.sh  pyproject.toml  requirements.txt
.github/workflows/: unittests.yaml
config/: data.yaml  events.yaml  indicators.yaml  paths.yaml
dashboard/: app.py
data/interim/: enriched_data.csv
docs/: data_enrichment_log.md  schem_doc.md
models/: forecast_outputs.csv  impact_association_matrix.csv
notebooks/: data_exploration.ipynb  data_exploration_and_enrichment_task1.ipynb  eda.ipynb  eda_new.ipynb  eda_old.ipynb  eda_task2.ipynb  event_impact_modelling.ipynb  forecasting.ipynb
src/fi_forecasting/core/: settings.py
src/fi_forecasting/data/: additional_parsers.py  enrichers.py  guide_ingestion.py  handler.py  loaders.py  transformers.py  validators.py
src/fi_forecasting/explorers/: events.py  findex.py  indicators.py  plots.py  temporial.py
src/fi_forecasting/impact/: impact_model.py  preprocessing.py
src/fi_forecasting/pipeline/: enrichment.py
src/fi_forecasting/utils/: helpers.py  logger.py
